--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
         android:id="@+id/title"
@@ -45,10 +44,26 @@
         android:hint="@string/hint_pass"
         android:inputType="textPassword"
         android:paddingHorizontal="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        app:layout_constraintBottom_toTopOf="@+id/etv_pass_confirm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etv_email" />
+
+    <EditText
+        android:id="@+id/etv_pass_confirm"
+        android:layout_width="match_parent"
+        android:layout_height="35dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
+        android:autofillHints="password"
+        android:background="@drawable/shape_edit_text"
+        android:hint="@string/hint_pass"
+        android:inputType="textPassword"
+        android:paddingHorizontal="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/etv_pass" />
 
     <Button
         android:id="@+id/btn_login"
@@ -57,27 +72,12 @@
         android:layout_marginTop="10dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:text="@string/login_btn"
+        android:text="@string/register_continue"
         android:textAllCaps="false"
-        app:layout_constraintBottom_toTopOf="@+id/btn_forgot_pass"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etv_pass" />
-
-    <Button
-        android:id="@+id/btn_forgot_pass"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="@color/background"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:text="@string/login_btn_forgot_pass"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+        app:layout_constraintTop_toBottomOf="@+id/etv_pass_confirm" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
