--- a/app/src/main/res/layout/fragment_register_fill_profile.xml
+++ b/app/src/main/res/layout/fragment_register_fill_profile.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -19,36 +18,36 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/etv_email"
+        android:id="@+id/etv_name"
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_marginHorizontal="20dp"
-        android:autofillHints="emailAddress"
         android:background="@drawable/shape_edit_text"
-        android:hint="@string/hint_email"
-        android:inputType="textEmailAddress"
+        android:hint="Имя"
+        android:inputType="text"
         android:paddingHorizontal="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/etv_pass"
+        app:layout_constraintBottom_toTopOf="@+id/etv_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <EditText
-        android:id="@+id/etv_pass"
+        android:id="@+id/etv_description"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
-        android:autofillHints="password"
+        android:gravity="top"
         android:background="@drawable/shape_edit_text"
-        android:hint="@string/hint_pass"
+        android:hint="Описание"
         android:inputType="textPassword"
+        android:minHeight="80dp"
         android:paddingHorizontal="10dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etv_email" />
+        app:layout_constraintTop_toBottomOf="@+id/etv_name" />
 
     <Button
         android:id="@+id/btn_login"
@@ -57,27 +56,11 @@
         android:layout_marginTop="10dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:text="@string/login_btn"
+        android:text="@string/register_btn"
         android:textAllCaps="false"
-        app:layout_constraintBottom_toTopOf="@+id/btn_forgot_pass"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etv_pass" />
-
-    <Button
-        android:id="@+id/btn_forgot_pass"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="@color/background"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
-        android:text="@string/login_btn_forgot_pass"
-        android:textAllCaps="false"
-        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
+        app:layout_constraintTop_toBottomOf="@+id/etv_description" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
