--- a/app/src/main/res/layout/fragment_register_fill_profile.xml
+++ b/app/src/main/res/layout/fragment_register_fill_profile.xml
@@ -20,11 +20,12 @@
     <EditText
         android:id="@+id/etv_name"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:background="@drawable/shape_edit_text"
-        android:hint="Имя"
+        android:hint="@string/register_name_hint_text"
         android:inputType="text"
+        android:minHeight="35dp"
         android:paddingHorizontal="10dp"
         app:layout_constraintBottom_toTopOf="@+id/etv_description"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,11 +39,13 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
-        android:gravity="top"
         android:background="@drawable/shape_edit_text"
-        android:hint="Описание"
-        android:inputType="textPassword"
-        android:minHeight="80dp"
+        android:gravity="top"
+        android:hint="@string/register_hint_description_text"
+        android:inputType="textMultiLine"
+        android:lines="5"
+        android:maxLines="5"
+        android:minHeight="35dp"
         android:paddingHorizontal="10dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
