--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="common_edit_txt">#E0DADA</color>
     <color name="background">#FFFFFF</color>
+
+    <color name="transparent">#00000000</color>
+    <color name="medium_light_gray">#E5E5E5</color>
 </resources>
