--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="background">#FFFFFF</color>
 
     <color name="transparent">#00000000</color>
+    <color name="placeholder">#33000000</color>
     <color name="medium_light_gray">#E5E5E5</color>
 </resources>
