--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -94,17 +94,17 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
     <FrameLayout
-        android:elevation="10dp"
         android:id="@+id/placeholder"
         android:layout_width="match_parent"
-        android:visibility="gone"
         android:layout_height="match_parent"
-        android:background="@color/placeholder">
+        android:background="@color/placeholder"
+        android:elevation="10dp"
+        android:visibility="visible">
 
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center" />
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
