--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/title"
@@ -17,67 +17,80 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/etv_email"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:autofillHints="emailAddress"
-        android:background="@drawable/shape_edit_text"
-        android:hint="@string/hint_email"
-        android:inputType="textEmailAddress"
-        android:paddingHorizontal="10dp"
         app:layout_constraintBottom_toTopOf="@+id/etv_pass"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_chainStyle="packed">
 
-    <EditText
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="emailAddress"
+            android:hint="@string/hint_email"
+            android:inputType="textEmailAddress"
+            android:paddingHorizontal="10dp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/etv_pass"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
-        android:autofillHints="password"
-        android:background="@drawable/shape_edit_text"
-        android:hint="@string/hint_pass"
-        android:inputType="textPassword"
-        android:paddingHorizontal="10dp"
         app:layout_constraintBottom_toTopOf="@+id/etv_pass_confirm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etv_email" />
+        app:layout_constraintTop_toBottomOf="@+id/etv_email">
 
-    <EditText
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/etv_pass_input"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:autofillHints="password"
+            android:background="@drawable/shape_edit_text"
+            android:hint="@string/hint_pass"
+            android:inputType="textPassword"
+            android:paddingHorizontal="10dp"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/etv_pass_confirm"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
+        android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
-        android:autofillHints="password"
-        android:background="@drawable/shape_edit_text"
-        android:hint="@string/hint_pass"
-        android:inputType="textPassword"
-        android:paddingHorizontal="10dp"
         app:layout_constraintBottom_toTopOf="@+id/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etv_pass" />
+        app:layout_constraintTop_toBottomOf="@+id/etv_pass" >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:autofillHints="password"
+            android:background="@drawable/shape_edit_text"
+            android:hint="@string/hint_pass"
+            android:inputType="textPassword"
+            android:paddingHorizontal="10dp"
+            android:layout_height="wrap_content"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
+        style="@style/BaseButton"
         android:id="@+id/btn_login"
-        android:layout_width="wrap_content"
-        android:layout_height="35dp"
         android:layout_marginTop="10dp"
-        android:insetTop="0dp"
-        android:insetBottom="0dp"
         android:text="@string/register_continue"
-        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etv_pass_confirm" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
