--- a/app/src/main/res/layout/fragment_create_room.xml
+++ b/app/src/main/res/layout/fragment_create_room.xml
@@ -105,7 +105,7 @@
                 android:textSize="16dp" />
 
             <androidx.appcompat.widget.SwitchCompat
-                android:id="@+id/sc_can_send_anonimus_message"
+                android:id="@+id/sc_can_send_anonymous_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp" />
@@ -128,6 +128,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
+                android:id="@+id/btn_create"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -138,5 +139,20 @@
         </LinearLayout>
 
     </ScrollView>
+
+    <FrameLayout
+        android:id="@+id/placeholder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/placeholder"
+        android:elevation="10dp"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
