--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -69,20 +69,10 @@
         android:id="@+id/btn_login"
         android:layout_marginTop="10dp"
         android:text="@string/login_btn"
-        app:layout_constraintBottom_toTopOf="@+id/btn_forgot_pass"
+        app:layout_constraintBottom_toTopOf="@+id/btn_register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etv_pass" />
-
-    <Button
-        style="@style/BaseButton"
-        android:id="@+id/btn_forgot_pass"
-        android:layout_marginTop="10dp"
-        android:text="@string/login_btn_forgot_pass"
-        app:layout_constraintBottom_toTopOf="@id/btn_register"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
     <Button
         style="@style/BaseButton"
@@ -92,7 +82,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_forgot_pass" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
     <FrameLayout
         android:id="@+id/placeholder"
