Добавлены макеты комнат и сообщений.

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -56,7 +56,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints="password"
-            android:background="@drawable/shape_edit_text"
+            android:background="@drawable/shape_rounded"
             android:hint="@string/hint_pass"
             android:inputType="textPassword"
             android:paddingHorizontal="10dp"/>
@@ -78,7 +78,7 @@
             android:id="@+id/etv_pass_confirm_input"
             android:layout_width="match_parent"
             android:autofillHints="password"
-            android:background="@drawable/shape_edit_text"
+            android:background="@drawable/shape_rounded"
             android:hint="@string/hint_pass"
             android:inputType="textPassword"
             android:paddingHorizontal="10dp"
