--- a/app/src/main/res/layout/fragment_register_fill_profile.xml
+++ b/app/src/main/res/layout/fragment_register_fill_profile.xml
@@ -22,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:background="@drawable/shape_edit_text"
+        android:background="@drawable/shape_rounded"
         android:hint="@string/register_name_hint_text"
         android:inputType="text"
         android:minHeight="35dp"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/shape_edit_text"
+        android:background="@drawable/shape_rounded"
         android:gravity="top"
         android:hint="@string/register_hint_description_text"
         android:inputType="textMultiLine"
