--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -54,7 +54,7 @@
     </fragment>
     <fragment
         android:id="@+id/roomsFragment"
-        android:name="com.kudashov.hangoverkitchenconversation.screens.RoomsFragment"
+        android:name="com.kudashov.hangoverkitchenconversation.screens.rooms.RoomsFragment"
         android:label="RoomsFragment"
         tools:layout="@layout/fragment_rooms">
         <action
