--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -13,11 +13,15 @@
         <action
             android:id="@+id/action_createRoomFragment_to_roomsFragment"
             app:destination="@id/roomsFragment"
+            app:enterAnim="@anim/nav_default_pop_enter_anim"
+            app:exitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@id/main_navigation_graph"
             app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_createRoomFragment_to_roomFragment"
-            app:destination="@id/roomFragment" />
+            app:destination="@id/roomFragment"
+            app:enterAnim="@anim/nav_default_pop_enter_anim"
+            app:exitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/fillProfileFragment"
@@ -35,10 +39,14 @@
         tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/action_loginFragment_to_roomsFragment"
-            app:destination="@id/roomsFragment" />
+            app:destination="@id/roomsFragment"
+            app:enterAnim="@anim/nav_default_pop_enter_anim"
+            app:exitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
-            app:destination="@id/registerFragment" />
+            app:destination="@id/registerFragment"
+            app:enterAnim="@anim/nav_default_pop_enter_anim"
+            app:exitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/registerFragment"
@@ -59,13 +67,19 @@
         tools:layout="@layout/fragment_rooms">
         <action
             android:id="@+id/action_roomsFragment_to_roomFragment"
-            app:destination="@id/roomFragment" />
+            app:destination="@id/roomFragment"
+            app:enterAnim="@anim/nav_default_pop_enter_anim"
+            app:exitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/action_roomsFragment_to_createRoomFragment"
-            app:destination="@id/createRoomFragment" />
+            app:destination="@id/createRoomFragment"
+            app:enterAnim="@anim/nav_default_pop_enter_anim"
+            app:exitAnim="@anim/nav_default_pop_exit_anim" />
         <action
             android:id="@+id/action_roomsFragment_to_profileFragment"
-            app:destination="@id/profileFragment" />
+            app:destination="@id/profileFragment"
+            app:enterAnim="@anim/nav_default_pop_enter_anim"
+            app:exitAnim="@anim/nav_default_pop_exit_anim" />
     </fragment>
     <fragment
         android:id="@+id/roomFragment"
@@ -75,6 +89,8 @@
         <action
             android:id="@+id/action_roomFragment_to_roomsFragment"
             app:destination="@id/roomsFragment"
+            app:enterAnim="@anim/nav_default_pop_enter_anim"
+            app:exitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@id/main_navigation_graph"
             app:popUpToInclusive="true" />
     </fragment>
@@ -86,6 +102,8 @@
         <action
             android:id="@+id/action_profileFragment_to_roomsFragment"
             app:destination="@id/roomsFragment"
+            app:enterAnim="@anim/nav_default_pop_enter_anim"
+            app:exitAnim="@anim/nav_default_pop_exit_anim"
             app:popUpTo="@id/main_navigation_graph"
             app:popUpToInclusive="true" />
     </fragment>
