--- a/app/src/main/res/layout/fragment_register_fill_profile.xml
+++ b/app/src/main/res/layout/fragment_register_fill_profile.xml
@@ -17,53 +17,63 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/etv_name"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
-        android:background="@drawable/shape_rounded"
-        android:hint="@string/register_name_hint_text"
-        android:inputType="text"
-        android:minHeight="35dp"
-        android:paddingHorizontal="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/etv_description"
+        android:layout_marginTop="80dp"
+        app:layout_constraintBottom_toTopOf="@+id/til_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed" />
+        app:layout_constraintVertical_chainStyle="packed">
 
-    <EditText
-        android:id="@+id/etv_description"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tie_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/register_name_hint_text"
+            android:inputType="text"
+            android:minHeight="35dp"
+            android:paddingHorizontal="10dp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/til_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
-        android:background="@drawable/shape_rounded"
-        android:gravity="top"
-        android:hint="@string/register_hint_description_text"
-        android:inputType="textMultiLine"
-        android:lines="5"
-        android:maxLines="5"
-        android:minHeight="35dp"
-        android:paddingHorizontal="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_login"
+        app:layout_constraintBottom_toTopOf="@+id/btn_continue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etv_name" />
+        app:layout_constraintTop_toBottomOf="@+id/til_name">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/tie_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/register_hint_description_text"
+            android:inputType="textMultiLine"
+            android:minHeight="35dp"
+            android:paddingHorizontal="10dp" />
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_continue"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginTop="10dp"
         android:insetTop="0dp"
         android:insetBottom="0dp"
-        android:text="@string/register_btn"
+        android:text="Продолжить"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etv_description" />
+        app:layout_constraintTop_toBottomOf="@+id/til_description" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
