--- a/app/src/main/res/layout/fragment_rooms.xml
+++ b/app/src/main/res/layout/fragment_rooms.xml
@@ -27,13 +27,13 @@
                 android:textSize="22sp" />
 
             <ImageView
-                android:id="@+id/iv_profile"
+                android:id="@+id/iv_logout"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_marginEnd="20dp"
                 android:layout_gravity="end"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_settings"
+                android:src="@drawable/ic_exit_to_app"
                 app:tint="@color/white" />
 
         </androidx.appcompat.widget.Toolbar>
